# amrex-tutorials

./: .gitignore  .gitpod.dependencies.sh  .gitpod.dockerfile  .gitpod.yml  CMakeLists.txt  LICENSE  README.md  gitpod.dependencies.sh  gitpod.dockerfile  gitpod.yml
ExampleCodes/: CMakeLists.txt
ExampleCodes/Amr/Advection_AmrLevel/: CMakeLists.txt
ExampleCodes/Amr/Wave_AmrLevel/: AmrLevelWave.H  AmrLevelWave.cpp  AmrWave.H  AmrWave.cpp  GNUmakefile  LevelBldWave.cpp  Make.package  README.md  Wave_advance.cpp  Wave_init.cpp  inputs  main.cpp
ExampleCodes/Basic/HeatEquation_EX1_CF/: CMakeLists.txt
ExampleCodes/Basic/HeatEquation_EX1_F/: GNUmakefile  fmain.F90
ExampleCodes/Basic/HeatEquation_EX2_CF/: CMakeLists.txt
ExampleCodes/Basic/HeatEquation_EX3_C/: CMakeLists.txt
ExampleCodes/Basic/HeatEquation_Restart/: CMakeLists.txt
ExampleCodes/Basic/HelloWorld_C/: GNUmakefile
ExampleCodes/Basic/HelloWorld_F/: GNUmakefile
ExampleCodes/Basic/main_C/: GNUmakefile  main.cpp
ExampleCodes/Basic/main_F/: GNUmakefile  main.F90
ExampleCodes/Blueprint/AssignMultiLevelDensity/: GNUmakefile  main.cpp
ExampleCodes/Blueprint/CellSortedParticles/: GNUmakefile
ExampleCodes/EB/GeometryGeneration/: GNUmakefile  main.cpp
ExampleCodes/EB/MacProj/: GNUmakefile  main.cpp
ExampleCodes/EB/Poisson/: GNUmakefile  Poisson.cpp
ExampleCodes/EB/STLtest/: GNUmakefile  inputs  main.cpp
ExampleCodes/FFT/Basic/: GNUmakefile  inputs  inputs_2d  main.cpp
ExampleCodes/FFT/EnergySpectrum/: GNUmakefile  README  main.cpp
ExampleCodes/FFT/Poisson/: GNUmakefile  inputs  main.cpp
ExampleCodes/FFTW/Basic/: GNUmakefile  Make.package  inputs  main.cpp  myfunc.H  myfunc.cpp
ExampleCodes/FFTW/Poisson/: GNUmakefile  inputs  main.cpp  myfunc.H  myfunc.cpp
ExampleCodes/ForkJoin/MLMG/: Backtrace.0  Backtrace.1  Backtrace.2  Backtrace.3  GNUmakefile
ExampleCodes/ForkJoin/Simple/: GNUmakefile  MyTest.cpp
ExampleCodes/GPU/: run.saul
ExampleCodes/LinearSolvers/ABecLaplacian_C/: GNUmakefile  MyTest.cpp
ExampleCodes/LinearSolvers/ABecLaplacian_F/: GNUmakefile  mytest.F90
ExampleCodes/LinearSolvers/MAC_Projection_EB/: GNUmakefile
ExampleCodes/LinearSolvers/MultiComponent/: GNUmakefile  MCNodalLinOp.H  MCNodalLinOp.cpp  inputs  main.cpp
ExampleCodes/LinearSolvers/NodalPoisson/: GNUmakefile
ExampleCodes/LinearSolvers/Nodal_Projection_EB/: GNUmakefile
ExampleCodes/LinearSolvers/NodeTensorLap/: GNUmakefile  README
ExampleCodes/ML/PYTORCH/: README.md
ExampleCodes/MPMD/Case-1/: mpmd_cpu.conf  mpmd_cpu.sh  mpmd_gpu.conf  mpmd_gpu.sh  perlmutter_gpu.profile
ExampleCodes/MPMD/Case-2/: GNUmakefile  main.cpp  main.py  mpmd_cpu.conf  mpmd_cpu.sh  mpmd_gpu.conf  mpmd_gpu.sh  perlmutter_gpu.profile
ExampleCodes/MUI/Exec_01/: GNUmakefile
ExampleCodes/MUI/Exec_02/: GNUmakefile
ExampleCodes/Particles/CellSortedParticles/: GNUmakefile
ExampleCodes/Particles/ElectromagneticPIC/: Make.EMPIC
ExampleCodes/Particles/ElectrostaticPIC/: CMakeLists.txt  ElectrostaticParticleContainer.cpp  Electrostatic_PIC_K.H  Electrostatic_PIC_Util.cpp  GNUmakefile  Make.ESPIC  Make.package  electrostatic_pic_2d.f90  electrostatic_pic_3d.f90  main.cpp
ExampleCodes/Particles/NeighborList/: GNUmakefile  MDParticleContainer.H  MDParticleContainer.cpp
ExampleCodes/SENSEI/Advection_AmrCore/: CMakeLists.txt
ExampleCodes/SUNDIALS/: CMakeLists.txt
ExampleCodes/SUNDIALS/AdvDiff-MLMGPrecon/: CMakeLists.txt
ExampleCodes/SUNDIALS/Exec/: GNUmakefile  README_sundials  inputs  inputs_forward_euler  inputs_rk3  inputs_sundials  inputs_sundials_erk
ExampleCodes/SUNDIALS/Source/: main.cpp
ExampleCodes/SUNDIALS_Multirate/Exec/: inputs
ExampleCodes/SWFFT/SWFFT_poisson/: GNUmakefile  swfft_solver.cpp
ExampleCodes/cmake/: SetupTutorials.cmake
ExampleCodes/heFFTe/: GNUmakefile  README  inputs  main.cpp
GuidedTutorials/: CMakeLists.txt  LICENSE  README.md  source_cooley_plotfile_tools.sh
GuidedTutorials/02_ParmParse/: CMakeLists.txt  inputs  main.cpp
GuidedTutorials/03_HeatEquation/: CMakeLists.txt  Visualization.ipynb  inputs
GuidedTutorials/04_ParticleMesh/: Visualization.ipynb  main.cpp
GuidedTutorials/05_ParticleMesh_MultiLevel/: CMakeLists.txt  Visualization.ipynb  inputs  main.cpp
GuidedTutorials/06_Advection_Amr/: AdvancePhiAllLevels.cpp  AdvancePhiAtLevel.cpp  AmrCoreAdv.cpp  CMakeLists.txt  DefineVelocity.cpp  Kernels.H  Visualization.ipynb  main.cpp
GuidedTutorials/07_Advection_EB/: CMakeLists.txt  DefineVelocity.cpp  EB_Cylinder.cpp  FluidParticleContainer.H  FluidParticleContainer.cpp  Indexing.H  Visualization.ipynb  mac_project_velocity.cpp  main.cpp
GuidedTutorials/08_Pachinko/: CMakeLists.txt  MyParticleContainer.H  MyParticleContainer.cpp  Visualization.ipynb  initial_particles_3d  inputs_3d  main.cpp  paraview_pachinko.py
GuidedTutorials/AMReX_Amr101/: README
GuidedTutorials/AMReX_EB_MacProj/: GNUmakefile  GNUmakefile_from_source  Make.package  MyParticleContainer.H  MyParticleContainer.cpp  README  initial_particles_3d  inputs_3d  main.cpp  makeparticlefile_3d.py  paraview_vis_script.py
GuidedTutorials/AMReX_EB_Pachinko/: GNUmakefile  GNUmakefile_movie  MyParticleContainer.H  MyParticleContainer.cpp  README  main.cpp  paraview_pachinko.py
GuidedTutorials/HeatEquation_Simple/: CMakeLists.txt  GNUmakefile  Visualization.ipynb  inputs
GuidedTutorials/HelloWorld/: CMakeLists.txt
GuidedTutorials/MultiFab/: CMakeLists.txt  main.cpp  main.py
GuidedTutorials/SUNDIALS+AMReX/: Advection-Diffusion.cpp  Advection-Diffusion.h  HandsOn1.cpp  HandsOn1.h  HandsOn2.cpp  HandsOn2.h  HandsOn3.cpp  HandsOn3.h  Makefile  README.md  diag_tools.py  inputs  inputs-1  inputs-2  inputs-3  process_ARKStep_diags.py  source_cooley_plotfile_tools.sh
GuidedTutorials/TAO-of-AMReX/: AMReX_BCUtil.cpp  MyTest.H  MyTest.cpp  MyTestPlotfile.cpp  README.md  boundary_control.cpp  initProb.cpp  initProb_K.H  inputs  makefile
GuidedTutorials/amrex-plotfile-example/: GNUmakefile  README.md  main.cpp
GuidedTutorials/cmake/: SetupTutorials.cmake
GuidedTutorials/vis/: ffmpeg_make_mp4  mkmovie.sh  slice.py
(+384 files in other folders)
